# arabot-rust

./: .gitignore  .twitch_settings.json.swp  Cargo.toml  LICENSE  README.md  build.rs  emotes.txt  settings.json  twitch_settings.json
settings/: commands.json  settings.json
src/: arabot.rs  lib.rs  main.rs
src/arabot/: message.rs
src/lib/communication/: .discord.rs.swp
