[package]
name = "arabot"
version = "0.1.0"
authors = ["Sondre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
twitchchat = "0.10"
tokio = { version = "0.2", features = ["full", "macros"] }
random = "0.12.2"
