[package]
name = "arabot"
version = "0.1.0"
authors = ["Sondre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
irc = "0.14.0"
random = "0.12.2"
futures = "0.3.5"
tokio = "0.2.21"
regex = "1.3.9"
#testing 

[dependencies.async-std]
version = "1.6.1"
features = ["unstable"]

[build-dependencies.config_struct]
version = "~0.4.0"
features = ["json-parsing"]
