[package]
name = "arabot"
version = "0.1.0"
authors = ["Sondre"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# #testing branches

[dependencies]
serde_json = "*"
irc = "*"
random = "*"
futures = "*"
tokio = {version = "*", features = ["full"]}
regex = "*"
rand = "*"
serde = "*"

[dependencies.async-std]
version = "*"
#features = ["unstable"]
#
[build-dependencies.config_struct]
version = "*"
features = ["json-parsing"]
